--- a/lang/de.yml
+++ b/lang/de.yml
@@ -26,6 +26,7 @@ de:
     db_URLSegment: 'URL-Segment'
     belongs_many_many_TeamMembers: 'Mannschaft'
     has_one_Image: 'Bild'
+    has_one_Platoon: 'Zug'
     has_many_Vehicles: 'Fahrzeuge'
     PLURALNAME: 'Gruppen'
     SINGULARNAME: 'Gruppe'
