renaming for german lang

--- a/lang/de.yml
+++ b/lang/de.yml
@@ -13,7 +13,7 @@ de:
     db_ShowInContactForm: 'Im Kontaktformular anzeigen'
     has_one_Image: 'Bild'
     many_many_Groups: 'Gruppen'
-    PLURALNAME: 'Mannschaft'
+    PLURALNAME: 'Mitglieder'
     SINGULARNAME: 'Mitglied'
     Yes: 'Ja'
     No: 'Nein'
@@ -24,7 +24,7 @@ de:
     db_Platoon: 'Zug'
     db_Title: 'Titel'
     db_URLSegment: 'URL-Segment'
-    belongs_many_many_TeamMembers: 'Mannschaft'
+    belongs_many_many_TeamMembers: 'Mitglieder'
     has_one_Image: 'Bild'
     has_one_Platoon: 'Zug'
     has_many_Vehicles: 'Fahrzeuge'
