--- a/lang/de.yml
+++ b/lang/de.yml
@@ -54,6 +54,12 @@ de:
     has_one_TeamGroup: 'Gruppe'
     has_one_TeamPlatoon: 'Zug'
 
+  WWN\Team\Extensions\TeamMemberPageExtension:
+    db_EnableTeamMemberExtension: 'Team Mitglieder auf Seiten aktivieren'
+    many_many_TeamMembers: 'Mitglieder'
+    PLURALNAME: 'Mitglieder'
+    SINGULARNAME: 'Mitglied'
+
   WWN\Vehicles\Vehicle:
     has_one_TeamGroup: 'Gruppe'
     has_one_TeamPlatoon: 'Zug'
