--- a/lang/en.yml
+++ b/lang/en.yml
@@ -49,6 +49,16 @@ de:
     UploadFolders: 'Folder for team images'
     has_one_TeamImageUploadFolder: 'Images'
 
+  WWN\Team\Extensions\VehicleExtension:
+    has_one_TeamGroup: 'Group'
+    has_one_TeamPlatoon: 'Platoon'
+
+  WWN\Team\Extensions\TeamMemberPageExtension:
+    db_EnableTeamMemberExtension: 'Enable team members on pages'
+    many_many_TeamMembers: 'Team members'
+    PLURALNAME: 'Team members'
+    SINGULARNAME: 'Team member'
+
   WWN\Vehicles\Vehicle:
     has_one_TeamGroup: 'Group'
     has_one_TeamPlatoon: 'Platoon'
