--- a/lang/de.yml
+++ b/lang/de.yml
@@ -11,6 +11,7 @@ de:
     db_Position: 'Position'
     db_ShowMailOnSite: 'E-Mail auf Website anzeigen'
     db_ShowInContactForm: 'Im Kontaktformular anzeigen'
+    belongs_many_many_Pages: 'Seiten'
     has_one_Image: 'Bild'
     many_many_Groups: 'Gruppen'
     PLURALNAME: 'Mitglieder'
@@ -24,6 +25,7 @@ de:
     db_Platoon: 'Zug'
     db_Title: 'Titel'
     db_URLSegment: 'URL-Segment'
+    belongs_many_many_Pages: 'Seiten'
     belongs_many_many_TeamMembers: 'Mitglieder'
     has_one_Image: 'Bild'
     has_one_Platoon: 'Zug'
