--- a/lang/de.yml
+++ b/lang/de.yml
@@ -68,6 +68,12 @@ de:
     PLURALNAME: 'Gruppen'
     SINGULARNAME: 'Gruppe'
 
+  WWN\Team\Extensions\TeamPlatoonPageExtension:
+    db_EnableTeamGroupExtension: 'Team Züge auf Seiten aktivieren'
+    many_many_TeamPlatoons: 'Züge'
+    PLURALNAME: 'Züge'
+    SINGULARNAME: 'Zug'
+
   WWN\Vehicles\Vehicle:
     has_one_TeamGroup: 'Gruppe'
     has_one_TeamPlatoon: 'Zug'
