--- a/lang/de.yml
+++ b/lang/de.yml
@@ -37,6 +37,7 @@ de:
     db_Content: 'Inhalt'
     db_Name: 'Name'
     db_URLSegment: 'URL-Segment'
+    belongs_many_many_Pages: 'Seiten'
     has_one_Image: 'Bild'
     has_many_Vehicles: 'Fahrzeuge'
     has_many_Groups: 'Gruppen'
