--- a/lang/de.yml
+++ b/lang/de.yml
@@ -43,6 +43,7 @@ de:
     has_one_Image: 'Bild'
     has_many_Vehicles: 'Fahrzeuge'
     has_many_Groups: 'Gruppen'
+    PagesGroupsMessage: '<p style="color: green">Nach dem Erstellen können weitere Einstellungen zu Fahrzeugen, Seiten und Gruppen vorgenommen werden.</p>'
     PLURALNAME: 'Züge'
     SINGULARNAME: 'Zug'
 
